# ripple-im-app

./: .gitignore  LICENSE  README.md  UI-PROMPT-TEMPLATE.md  UI-STYLE-GUIDE.md  package-lock.json  package.json  ripple-api.json  ripple-upload.json  vite.config.ts
ripple-proto/: Cargo.toml  build.rs
ripple-proto/src/: lib.rs  wsmessage.proto
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql
src-tauri/resources/: auth-failed.html  auth-success-restart.html  auth-success.html  dev_app_config.json  invalid-state.html
src-tauri/src/: app_config.rs  auth_token.rs  commands.rs  db.rs  errors.rs  file_utils.rs  image_processor.rs  lib.rs  main.rs  oauth_client.rs  ripple.rs  server.rs  store_engine.rs  store_engine_sqlite.rs
src-tauri/src/ripple/: api_paths.rs  api_response.rs  auth_token_parser.rs  oauth_client.rs  ripple_api.rs  token_store.rs
src-tauri/src/ripple_api/: api_paths.rs  api_response.rs  auth_token_parser.rs  mod.rs  oauth_client.rs  ripple_api.rs
src-tauri/src/ripple_syncer/: conversation_operation.rs  data_sync_manager.rs  default_event_emitter.rs  event_emitter.rs  incremental_operations.rs  incremental_sync_manager.rs  mod.rs  relation_operation.rs  ripple_ws_sync_handler.rs  sync_handler.rs  ui_event.rs
src-tauri/src/ripple_ws/: mod.rs  ripple_ws_manager.rs  sync_aware_ws_message_handler.rs  syncer_control.rs  ws_message_handler.rs  ws_utils.rs
src-tauri/src/store_engine/: mod.rs  store_engine.rs  store_sqlite.rs
src-tauri/src/store_engine_sqlite/: store_sqlite.rs
src/assets/: style.css
src/components/chat/: CommandMessage.vue  ConversationItem.vue  CreateGroupDialog.vue  FileInfoModal.vue  FileMessageBubble.vue  GroupChatHeader.vue  ImageMessageBubble.vue  ImagePreviewModal.vue
src/components/common/: AvatarCropper.vue  AvatarPreviewDialog.vue
src/components/friends/: AddFriend.vue  FriendRequests.vue  FriendSearch.vue  FriendsList.vue
src/components/group/: EditGroupDialog.vue  InviteMembersDialog.vue  LeaveGroupDialog.vue  ViewMembersDialog.vue
src/components/navigation/: NavigationSidebar.vue
src/components/shared/: HeroIcon.vue
src/components/views/: EmptyView.vue
src/composables/: useAppState.ts  useAvatarPicker.ts  useEventListeners.ts  useGroupsDisplay.ts  useRelationActions.ts  useRelationEvents.ts  useRelationsDisplay.ts  useRelationsState.ts  useUserProfile.ts  useUserProfileDisplay.ts
src/router/: router.ts
src/types/: app-state.ts  chat.ts  friends.ts  group.ts  navigation.ts  relations.ts
src/utils/: dateFormat.ts  fileUtils.ts  messagePersonalization.ts
src/views/: ChatView.vue  Home.vue  Login.vue  PeopleView.vue  SettingsView.vue
(+9 files in other folders)
