[package]
name = "ripple-im-app"
version = "0.1.0"
description = "ripple.im desktop application"
authors = ["junjie722@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ripple_im_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["memory-store"]
memory-store = []
sqlite-store = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
thiserror = "2.0.12"
tauri-plugin-dialog = "2"
axum = "0.8.4"
tokio = "1.46.1"
oauth2 = "5.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
libsqlite3-sys = { version = "0.30.1", optional = false, default-features = false, features = [
    "bundled-sqlcipher"
] }
base64 = "0.22.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
uuid = { version = "1.17.0", features = ["v4"] }
image = "0.25.6"
reqwest = { version = "0.12.22", features = ["multipart", "json"] }
sha2 = "0.10"
base16ct = { version = "0.2.0", features = ["alloc"] }
mime = "0.3.17"
tokio-tungstenite = "*"
futures-util = "0.3"
trait-variant = "0.1.2"
prost = "0.14"
ripple-proto = { path = "../ripple-proto" }
backoff = { version = "0.4.0", features = ["tokio"] }
futures-channel = "0.3.31"
